Revert "Fixed Layout bug when logged in."
This reverts commit cb0db71b44c63a82c8b411d8e6891097b43aea85.

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -31,9 +31,7 @@ a:hover {color: #029;}
 .yui-t2 {background: #fff url('../images/border.png') repeat-x top left; border-bottom: 2px solid #555; margin: 0px auto;}
 /* border-top: 10px solid #548cd8; -moz-border-top-colors: #548cd8 #5188d3 #4e84d0 #4b81cd #497dc9 #457ac6 #4376c2 #4173be #3e71bc #3d6fba; */
 #doc1, #doc2, #doc1, #doc4 {width: 920px;}
-/*User Links */
-.user-links {width: 60%; float: right;}
-.title-space{width: 20.1%; float: left; text-align: left;}
+
 /* Body Container Layout */
 #bd {padding: 0 2em 2em 2em;}
 #yui-main {position: relative; width: 875px;}
